--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@ Summer Project
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="{{ url_for('signup') }}">input an image</a></li>
+            <li><a href="{{ url_for('list') }}">browse data set randomly</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
